work & education description update

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Banglalink</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<p>Banglalink is a top telecommunications provider in Bangladesh, offering affordable mobile and data services. With a user-friendly website and app, customers can easily manage their accounts and access digital products. The company is dedicated to delivering high-quality connectivity and innovative digital solutions.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -261,7 +261,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Spondon IT</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>Spondon IT is a dynamic technology company specializing in software solutions and digital services. They offer a range of products, including a user-friendly website and app for seamless management and integration. Spondon IT is committed to delivering cutting-edge technology to enhance business operations and digital experiences.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -279,7 +279,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>A1qa</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>a1qa is a global provider of software testing and quality assurance services. Their offerings include comprehensive testing solutions for web and mobile apps, ensuring high performance and reliability. Through their website and app, clients can access detailed insights and manage their testing processes efficiently. a1qa is dedicated to delivering exceptional quality and enhancing digital product performance.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -315,7 +315,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Bangladesh University of Business & Technology</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<p>The Computer Science and Engineering (CSE) department at Bangladesh University of Business and Technology (BUBT) offers a robust curriculum designed to equip students with cutting-edge skills in technology and computing. With a focus on both theoretical knowledge and practical application, the department prepares graduates for careers in software development, data science, and IT management. The department is known for its modern facilities, experienced faculty, and commitment to fostering innovation and research in the field of computer science.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -333,7 +333,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Govt. Science College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>Govt Science College in Dhaka is a premier institution specializing in science and technology education. It offers a diverse range of undergraduate and graduate programs, emphasizing rigorous academic training and research. Known for its experienced faculty and state-of-the-art facilities, the college is dedicated to cultivating scientific talent and fostering innovation.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -351,7 +351,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Mohammadpur Govt. High School</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<p>Mohammadpur Govt High School in Dhaka is a well-established educational institution offering quality education from grades 1 to 10. Renowned for its dedicated faculty and supportive learning environment, the school focuses on academic excellence and holistic development. With modern facilities and a commitment to nurturing students' potential, Mohammadpur Govt High School plays a key role in shaping young minds for future success.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
