--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
       	<div class="col-six tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright 2023 </span> 
-		        	<span>Design by <a href="#about">Emon</a></span> 
+		        	<span>Design by <a href="#about">Ghost</a></span> 
 		         </div>		                  
 	      	</div>
 
