--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Md Emon Ali.</h1>
+	   			<h5>Hello World ! This is -</h5>
+	   			<h1>MD EMON ALI.</h1>
 
 	   			<p class="intro-position">
 	   				<span>Software Quality Assurance Engineer</span>
-				        <span>Banglalink</span>
+				        <span>at Banglalink</span>
 
 	   				
 	   			</p>
