--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello World ! This is -</h5>
-	   			<h1>MD EMON ALI.</h1>
+	   			<h1>MD EMON ALI</h1>
 
 	   			<p class="intro-position">
 	   				<span>Software Quality Assurance Engineer</span>
