--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>A1qa</h4>
-	   					<p>a1qa is a global provider of software testing and quality assurance services. Their offerings include comprehensive testing solutions for web and mobile apps, ensuring high performance and reliability. Through their website and app, clients can access detailed insights and manage their testing processes efficiently. a1qa is dedicated to delivering exceptional quality and enhancing digital product performance.</p>
+	   					<p>A1qa is a global provider of software testing and quality assurance services. Their offerings include comprehensive testing solutions for web and mobile apps, ensuring high performance and reliability. Through their website and app, clients can access detailed insights and manage their testing processes efficiently. a1qa is dedicated to delivering exceptional quality and enhancing digital product performance.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
