--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 	   			<p class="intro-position">
 	   				<span>Software Quality Assurance Engineer</span>
-				        <span>at Banglalink</span>
+				        <span>Banglalink</span>
 
 	   				
 	   			</p>
