--- a/index.html
+++ b/index.html
@@ -131,20 +131,20 @@
 
    			<ul class="info-list">
    				<li>
-   					<strong>Fullname:</strong>
+   					<strong>Full Name:</strong>
    					<span>Md Emon Ali</span>
    				</li>
    				<li>
-   					<strong>Birth Date:</strong>
-   					<span>May 3, 2000</span>
+   					<strong>Nationality:</strong>
+   					<span>Bangladeshi</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
    					<span>SQA Engineer at Banglalink</span>
    				</li>
    				<li>
-   					<strong>Website:</strong>
-   					<span>unrealemon.github.io</span>
+   					<strong>Github:</strong>
+   					<span>github.com/unrealemon</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
