--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
    					<span>github.com/unrealemon</span>
    				</li>
    				<li>
-   					<strong>Email:</strong>
-   					<span>emonali.w@gmail.com</span>
+   					<strong>Publication:</strong>
+   					<span><a href="https://ieeexplore.ieee.org/document/10441585">Marine animal classification using CNN</a></span>
    				</li>
 
    			</ul> <!-- /info-list -->
