--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
    				</li>
    				<li>
    					<strong>Publication:</strong>
-   					<span><a href="https://ieeexplore.ieee.org/document/10441585">Marine animal classification using CNN</a></span>
+   					<span>Marine animal classification using CNN<a href="https://ieeexplore.ieee.org/document/10441585">[Read]</a></span>
    				</li>
 
    			</ul> <!-- /info-list -->
