--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
    				</li>
    				<li>
    					<strong>Github:</strong>
-   					<span>github.com/unrealemon</span>
+   					<span>Md Emon Ali  <a href="https://github.com/unrealemon</span>"> ( visit profile ) </span>
    				</li>
    				<li>
    					<strong>Publication:</strong>
-   					<span>Marine animal classification using CNN <a href="https://ieeexplore.ieee.org/document/10441585"> (read here)</a></span>
+   					<span>Marine animal classification using CNN <a href="https://ieeexplore.ieee.org/document/10441585"> (read article)</a></span>
    				</li>
 
    			</ul> <!-- /info-list -->
