--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
    				</li>
    				<li>
    					<strong>Github:</strong>
-   					<span>Md Emon Ali  <a href="https://github.com/unrealemon</span>"> ( visit profile ) </span>
+   					<span>Md Emon Ali  <a href="https://github.com/unrealemon</span>"> (visit profile)</a></span>
    				</li>
    				<li>
    					<strong>Publication:</strong>
