--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
    				</li>
    				<li>
    					<strong>Github:</strong>
-   					<span>Md Emon Ali  <a href="https://github.com/unrealemon"> (visit profile)</a></span>
+   					<span><a href="https://github.com/unrealemon">Md Emon Ali</a></span>
    				</li>
    				<li>
    					<strong>Publication:</strong>
-   					<span>Marine animal classification using CNN <a href="https://ieeexplore.ieee.org/document/10441585"> (read article)</a></span>
+   					<span><a href="https://ieeexplore.ieee.org/document/10441585">Marine animal classification using CNN</a></span>
    				</li>
 
    			</ul> <!-- /info-list -->
