--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
    	<ul class="intro-social">        
          <li><a href="https://www.facebook.com/emon.ak23"><i class="fa fa-facebook"></i></a></li>
          <li><a href="https://www.linkedin.com/in/aliemon"><i class='fa fa-linkedin-square'></i></a></li>
-	 <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fa fa-snapchat"></i></a></li>
+	 <li><a href="https://github.com/unrealemon"><i class="fa fa-github"></i></a></li>
 	 <li><a href="https://t.me/unrealemon"><i class="fa fa-telegram"></i></a></li>
 	 <li><a href="https://www.instagram.com/unrealemon"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
@@ -994,7 +994,7 @@
      			<ul class="footer-social">        
 			      <li><a href="https://www.facebook.com/emon.ak23"><i class="fa fa-facebook"></i></a></li>
                               <li><a href="https://www.linkedin.com/in/aliemon"><i class='fa fa-linkedin-square'></i></a></li>
-	                      <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fa fa-snapchat"></i></a></li>
+	                       <li><a href="https://github.com/unrealemon"><i class="fa fa-github"></i></a></li>
 	                      <li><a href="https://t.me/unrealemon"><i class="fa fa-telegram"></i></a></li>
 	                      <li><a href="https://www.instagram.com/unrealemon"><i class="fa fa-instagram"></i></a></li>
 			   </ul> 
