--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta charset="utf-8">
 	<title>Emon</title>
 	<meta name="description" content="Hello, this is Md Emon Ali from Bangladesh. I am working as a SQA Engineer at Banglalink. After graduating from BUBT in 2023 under the CSE department, I have started my career as a SQA in the same year.">  
-	<meta name="keywords" content="emon, Emon, EMON, emon ali, Emon Ali, EMON ALI, emon sqa, Emon Sqa, Emon SQA, Emon QA, Md Emon Ali, md emon ali, md emon ali sqa, md emon ali qa, md emon ali bubt, Md Emon Ali BUBT, md emon ali banglalink, Md Emon Ali Banglalink SQA, MD Emon Ali Banglalink QA, unrealemon, Unrealemon">
+	<meta name="keywords" content="emon, Emon, EMON, emon ali, Emon Ali, EMON ALI, emon sqa, Emon Sqa, Emon SQA, Emon QA, Md Emon Ali, md emon ali, md emon ali sqa, md emon ali qa, md emon ali bubt, Md Emon Ali BUBT, md emon ali banglalink, Md Emon Ali Banglalink SQA, MD Emon Ali Banglalink QA, unrealemon, Unrealemon, dhaka, Dhaka, bangladesh, Bangladesh, banglalink, Banglalink, SQA, sqa, Sqa, QA, qa, Qa, Software Quality Assurance Engineer, SQA engineer, SQA Engineer, software quality assurance engineer, software quality assurance officer, BUBT, bubt, Bubt, Bangladesh University of Business and Technology, bangladesh university of business and technology">
 	<meta name="author" content="Md Emon Ali">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
